<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_with_logo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PracticeTestFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPracCat1"
        android:layout_width="450sp"
        android:layout_height="@dimen/main_cat_height"
        android:layout_marginBottom="@dimen/main_cat_bottom_margin"
        app:layout_constraintBottom_toTopOf="@+id/clPracCat2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glDash1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".19" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="@dimen/sub_bg_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/right_tile_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo1"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_phy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glDash1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCatName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/sug_sub1"
            android:textAllCaps="true"
            android:textColor="@color/textColor1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imgLogo1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPracCat2"
        android:layout_width="450sp"
        android:layout_height="@dimen/main_cat_height"
        android:layout_marginBottom="@dimen/main_cat_bottom_margin"
        app:layout_constraintBottom_toTopOf="@+id/clPracCat3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPracCat1"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glDash2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".82" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="@dimen/sub_bg_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/left_tile_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo2"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3sp"
            android:src="@drawable/ic_chemistry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glDash2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

        <TextView
            android:id="@+id/tvCatName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/sug_sub2"
            android:textAllCaps="true"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/main_cat_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imgLogo2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.507" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPracCat3"
        android:layout_width="450sp"
        android:layout_height="@dimen/main_cat_height"
        android:layout_marginBottom="@dimen/main_cat_bottom_margin"
        app:layout_constraintBottom_toTopOf="@+id/clPracCat4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPracCat2"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glDash3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".19" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="@dimen/sub_bg_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/right_tile_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo3"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_biology"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glDash3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.435" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/sug_sub3"
            android:textAllCaps="true"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/main_cat_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLogo3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPracCat4"
        android:layout_width="450sp"
        android:layout_height="@dimen/main_cat_height"
        android:layout_marginBottom="@dimen/main_cat_bottom_margin"
        app:layout_constraintBottom_toTopOf="@+id/clPracCat5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPracCat3"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glDash4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".82" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="@dimen/sub_bg_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/left_tile_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo4"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginBottom="10sp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_math"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glDash4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/sug_sub4"
            android:textAllCaps="true"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/main_cat_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgLogo4"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPracCat5"
        android:layout_width="450sp"
        android:layout_height="@dimen/main_cat_height"
        android:layout_marginBottom="@dimen/main_cat_bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPracCat4"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glDash5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".19" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="@dimen/sub_bg_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/right_tile_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo5"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/ic_syllabus"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:padding="3sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glDash5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.435" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/sug_sub5"
            android:textAllCaps="true"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/main_cat_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLogo5"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>